--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,4 +5,10 @@
       margin: 0 8px 8px 0;
     }
   }
+  .pagination{
+    a.active{
+      background: #337ab7;
+      color:#ddd;
+    }
+  }
 }
