navigation working, next, before, end and start

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,9 @@
 @import "bootstrap";
 #wrapper{
   .list-accounts{
+    p{
+      font-size: 11px;
+    }
     a.btn{
       margin: 0 8px 8px 0;
     }
