light changes, for socke

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,9 @@
 @import "bootstrap";
+@import "box-shadow";
 #wrapper{
+  .tweet{
+    padding: 12px 8px;
+  }
   .list-accounts{
     p{
       font-size: 11px;
